# scribe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quodana.yml
scribe/client/: __init__.py  audio.go  config.go  httpclient.go  main.go  wav.go
scribe/resources/: schema.sql
scribe/resources/db/sqlite/: schema.sql
scribe/resources/static/: style.css
scribe/resources/templates/: base.html  session.html
scribe/server/: __init__.py  db.py  exceptions.py  file_manager.py  models.py  webserver.py
scribe/server/transcriber/: worker.py
